# challenge-rt-book

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Checker_pattern.cpp  Checker_pattern.h  Computation.cpp  Computation.h  Cube.cpp  Cube.h  Experimental_pattern.cpp  Experimental_pattern.h  Gradient_pattern.cpp  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Pattern.cpp  Pattern.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Ring_pattern.cpp  Ring_pattern.h  Shape.cpp  Sphere.cpp  Sphere.h  Stripe_pattern.cpp  World.cpp  World.h  basic_tests.cpp  fail_rerun.sh  matrix.h  rt.h  run_test.sh  (+1 more)
samples/: CMakeLists.txt  ball_between.cpp  ch10_ex.cpp  ch11_ex.cpp  ch5_ex.cpp  ch6_ex.cpp  ch7_ex.cpp  ch8_ex.cpp  ch9_ex.cpp  clock.cpp  physics.cpp  profiler.h
src/: Checker_pattern.cpp  Computation.cpp  Cube.cpp  Cylinder.cpp  Gradient_pattern.cpp  Light.cpp  Matrix.cpp  Pattern.cpp  Plane.cpp  Sphere.cpp  Stripe_pattern.cpp  World.cpp  rt.cpp
src/include/: Cube.h  Cylinder.h  Gradient_pattern.h  Light.h  Material.h  Matrix.h  Pattern.h  Shape.h  Stripe_pattern.h  World.h  rt.h
